# tp-3-ivan_maciej

./: .gitignore  CMakeLists.txt  main.cpp  signal_lib.cpp  test.cpp  test.py
raport/: oddanie_projektu.ipynb
